--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Methods for wrapping the Nest API calls so that they are                   accessible via Perl'
+abstract: 'Methods for wrapping the Nest API calls so that they are                 accessible via Perl'
 author:
   - 'A. U. Thor <pi@>'
 build_requires:
@@ -17,5 +17,7 @@ no_index:
   directory:
     - t
     - inc
-requires: {}
-version: 0.01
+requires:
+  JSON: 2.90
+  LWP::UserAgent: 6.05
+version: 0.02
